		TODO list because this solution works better.

	mbmsg:
		Code cleanup and removed dead code.

	mbout:
		Code cleanup.

	mbsebbs:
		Code cleanup.
		Changed syntax for calling mbpasswd.
		Blocked sysop to chat and page the sysop. Sysops use mbmon.

	mbnewusr:
		Changed syntax for calling mbpasswd.
		If we can detect the users screenlength then we don't bother
		asking the user.

	mbsetup:
		Added node setup switch to override node Hold or Down status.
		Changed syntax for calling mbpasswd.

	script:
		Added mbfile check to monthly maintenance script.

	mbpasswd:
		Added security checks to see if this program is legally called.
		Changed commandline syntax.

	mbuseradd:
		Added security checks to see if this program is legally called.


v0.71.4		12-Aug-2005 - 18-Aug-2005

	mbselib.a:
		Removed some debug logging.

	msgbase.a:
		Fixed JAM pack function, the lastread pointers could be wrong
		if the last messages of an area were deleted.

	mbfido:
		Added extra debug logging to trace an SIGSEG when forwarding
		files.
		Added error logmessage in case *.msg path isn't defined.
		Fixed a segfault when echomail.jam or netmail.jam is corrupted
		when scanning for outgoing mail.
		Fixed fido style from address for posting news.
		Reinstalled charset translation on the gateway. Changed the
		way how FTN kludges are translated to RFC headers.
		Dropped support for newsgroup distribution.
		In tic processing changed pointer type for seenby lists.
		Fixed running out of file descriptors when there are lots of
		bad mailpackets.

	mbsebbs:
		Fixed headerlines for posting news.
		Fixed headerlines for posting email.

	mbnntp:
		Improved charset detection.

	mbcico:
		Changed compression init functions to fix mysterious crashes
		on some systems.

	mbsetup:
		Dropped support for newsgroup distribution.


v0.71.3		13-Jun-2005 - 12-Aug-2005

	upgrade:
		Check mbsetup 7.n.3.14 and 7.n.3.15 settings.
		You may limit the mailhistory.html by setting 1.15.8